srcs = [
	'action.c',
	'audiodevice.c',
	'cia.c',
	'consoledevice.c',
	'fileselector.c',
	'filesystem.c',
	'gameport.c',
	'graphics.c',
	'input.c',
	'inputdevice.c',
	'keyboard.c',
	'libraries.c',
	'main.c',
	'utility.c',
	'version.c'
]

executable('pt1210', sources : srcs, include_directories : incdirs, link_with : legacy, install : true)

